--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "document-management-system",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx --env-file=.env src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,16 @@
   "devDependencies": {
     "@types/node": "^25.0.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@fastify/postgres": "^6.0.2",
+    "@fastify/type-provider-typebox": "^6.1.0",
+    "@sinclair/typebox": "^0.34.48",
+    "fastify": "^5.7.4",
+    "fastify-plugin": "^5.1.0",
+    "firebase-admin": "^13.6.1",
+    "http-status-codes": "^2.3.0"
   }
 }
